vlib/v/checker/tests/append_err.vv
fn main() {
	mut l := []int{}
	l << 'test'
	
	_ = l << 3
	_ = (l << 3).len
}
